@@ -406,6 +406,70 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testValidateInIvySettings
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// cfr IVY-992
+name|project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.dep.file"
+argument_list|,
+literal|"test/java/org/apache/ivy/ant/ivy-latest-extra.xml"
+argument_list|)
+expr_stmt|;
+name|retrieve
+operator|.
+name|getSettings
+argument_list|()
+operator|.
+name|setValidate
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|retrieve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|IvyPatternHelper
+operator|.
+name|substitute
+argument_list|(
+name|RETRIEVE_PATTERN
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.2"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"default"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testInline
 parameter_list|()
 throws|throws
